src/objects/Related_Customer_Stories__c/Related_Customer_Stories__c.object-meta.xml
<CustomObject>
    <label>Related Customer Stories</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Customer Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>