src/objects/Related_Customer_Stories__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>For Displaying opportunity account/customer name</description>
    <label>CustomerName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>