src/objects/Related_Customer_Stories__c/fields/CustomerStory__c.field-meta.xml
<CustomField>
    <fullName>CustomerStory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For updating customer story</description>
    <label>CustomerStory</label>
    <referenceTo>CustomerStory__c</referenceTo>
    <relationshipLabel>Related Customer Stories</relationshipLabel>
    <relationshipName>Related_Customer_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>