src/objects/Related_Customer_Stories__c/fields/Files_Links_1__c.field-meta.xml
<CustomField>
    <fullName>Files_Links_1__c</fullName>
    <description>updating  customer story PDF link value</description>
    <label>PDF Link</label>
    <type>Url</type>
</CustomField>