src/objects/Related_Customer_Stories__c/fields/Files_Links_2__c.field-meta.xml
<CustomField>
    <fullName>Files_Links_2__c</fullName>
    <description>For updating customer story video link value</description>
    <label>Video Link - Windows</label>
    <type>Url</type>
</CustomField>