src/objects/Related_Customer_Stories__c/fields/Is_Reference_Materials_used__c.field-meta.xml
<CustomField>
    <fullName>Is_Reference_Materials_used__c</fullName>
    <defaultValue>false</defaultValue>
    <description>updating reference is used</description>
    <label>Is Reference Materials used?</label>
    <type>Checkbox</type>
</CustomField>