src/objects/Related_Customer_Stories__c/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <description>updating opportunity make value</description>
    <label>Make</label>
    <length>25</length>
    <type>Text</type>
</CustomField>