src/objects/Related_Customer_Stories__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For updating related opportunity value</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Customer Stories</relationshipLabel>
    <relationshipName>Related_Customer_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>