src/objects/Related_Customer_Stories__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For updating customer story product value</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Customer Stories</relationshipLabel>
    <relationshipName>Related_Customer_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>