src/objects/Related_Customer_Stories__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>For updating customer story product line value</description>
    <label>Product Line</label>
    <length>25</length>
    <type>Text</type>
</CustomField>