src/objects/Related_Customer_Stories__c/fields/Solutions__c.field-meta.xml
<CustomField>
    <fullName>Solutions__c</fullName>
    <description>For updating customer story story valur</description>
    <label>Story</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>