src/objects/Related_Customer_Stories__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>For updating Customer story summary value</description>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>