src/objects/Related_Customer_Stories__c/fields/Video_Link_Mac__c.field-meta.xml
<CustomField>
    <fullName>Video_Link_Mac__c</fullName>
    <label>Video Link - Mac</label>
    <type>Url</type>
</CustomField>